--- a/config.yaml
+++ b/config.yaml
@@ -10,8 +10,11 @@ circularity:
   default_threshold: 0.8  # 圆度阈值
 
 filter:
-  min_area: 500  # 最小面积
-  max_area: 1000000  # 最大面积
+  min_area: 2000  # 最小面积
+  max_area: 5000  # 最大面积
 
 offset:
   threshold: 5  # 偏移量阈值
+
+center:
+  offset: 0  # 中心点偏移阈值
